In class for Saturday Assignment

--- a/index.html
+++ b/index.html
@@ -13,8 +13,11 @@
         <h1>WDD 131 Coursework</h1>
     </header>
     <main>
-        <p class='green'>Content will go here</p>
-        <p>More content here</p>
+        <h2>Assignments</h2>
+        <ol>
+            <a href="mission/index.html">Mission Statement</a>
+            <a href="coolpics/index.html">Coolpics</a>
+        </ol>
     </main>
     <footer>
         <p>&copy; 2024 Bro T</p>
