--- a/coolpics/index.html
+++ b/coolpics/index.html
@@ -7,23 +7,26 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Coolpics</title>
     <link rel="stylesheet" href="coolpics.css">
-    <script src="coolpics.js"></script>
-    
+    <script defer src="coolpics.js"></script> <!-- Use 'defer' to ensure JS loads after HTML -->
 </head>
 <body>
+    <div class="viewer">
+        <!-- <button class="close-viewer">X</button>
+        <img src="image.jpeg" alt="alt description"> -->
+    </div>
     <header>
         <h1>Cool Pics 📷</h1>
-        <button>Menu</button>
-        <ul>
-            <a href="#">Home</a>
-            <a href="#">People</a>
-            <a href="#">Places</a>
-            <a href="#">About</a>
-            <a href="#">Contact</a>
+        <button class="menu-button">Menu</button>
+        <ul class="menu hide">
+            <li><a href="#">Home</a></li>
+            <li><a href="#">People</a></li>
+            <li><a href="#">Places</a></li>
+            <li><a href="#">About</a></li>
+            <li><a href="#">Contact</a></li>
         </ul>
     </header>
     <main>
-        <h1>Current Work</h1>
+        <h2>Current Work</h2>
         <section class="gallery">
             <figure>
                 <img src="norris-sm.jpeg" alt="picture">
@@ -43,7 +46,7 @@
             <figure>
                 <img src="norris-sm.jpeg" alt="picture">
             </figure>
-            <figure>
+            <figure></figure>
                 <img src="norris-sm.jpeg" alt="picture">
             </figure>
             <figure>
