--- a/coolpics/index.html
+++ b/coolpics/index.html
@@ -11,13 +11,13 @@
 </head>
 <body>
     <div class="viewer">
-        <!-- <button class="close-viewer">X</button>
-        <img src="image.jpeg" alt="alt description"> -->
+        <button class="close-viewer">X</button>
+        <img src="image.jpeg" alt="alt description">
     </div>
     <header>
         <h1>Cool Pics 📷</h1>
         <button class="menu-button">Menu</button>
-        <ul class="menu hide">
+        <ul class="menu-hide">
             <li><a href="#">Home</a></li>
             <li><a href="#">People</a></li>
             <li><a href="#">Places</a></li>
