--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
         <ol>
             <a href="mission/index.html">Mission Statement</a>
             <a href="coolpics/index.html">Coolpics</a>
+            <a href="blog/index.html">Blog</a>
         </ol>
     </main>
     <footer>
