--- a/coolpics/index.html
+++ b/coolpics/index.html
@@ -10,14 +10,10 @@
     <script defer src="coolpics.js"></script> <!-- Use 'defer' to ensure JS loads after HTML -->
 </head>
 <body>
-    <div class="viewer">
-        <button class="close-viewer">X</button>
-        <img src="image.jpeg" alt="alt description">
-    </div>
     <header>
         <h1>Cool Pics 📷</h1>
-        <button class="menu-button">Menu</button>
-        <ul class="menu-hide">
+        <button class="menu">Menu</button>
+        <ul class="menu hide">
             <li><a href="#">Home</a></li>
             <li><a href="#">People</a></li>
             <li><a href="#">Places</a></li>
