--- a/second-chance/site-plan.html
+++ b/second-chance/site-plan.html
@@ -4,7 +4,7 @@
 	<head>
 		<meta charset="utf-8" />
 		<title>Site Plan</title>
-		<link type="text/css" rel="stylesheet" href="site-plan.css" />
+		<link type="text/css" rel="stylesheet" href="styles/site-plan.css" />
 	</head>
 
 	<body>
@@ -49,9 +49,9 @@
 			<!-- Copy and paste the URL to your finished palette below Make sure to paste it into both spots -->
 			Palette URL:
 			<a
-				href="https://coolors.co/396e94-e7c24f-a43312-381d2a-aabd8c"
+				href="https://coolors.co/3a3b3f-a0361b-d6d6d8-114b2c-329f5b"
 				target="_blank"
-				>https://coolors.co/396e94-e7c24f-a43312-381d2a-aabd8c</a
+				>https://coolors.co/3a3b3f-a0361b-d6d6d8-114b2c-329f5b</a
 			>
 
 			<table class="colors">
@@ -64,10 +64,10 @@
 					</tr>
 					<!-- Replace the numbers in the boxes below with your hex color codes. Then switch to the site-plan.css file and change your colors there as well. -->
 					<tr>
-						<td class="primary">[#396E94]</td>
-						<td class="secondary">[#E7C24F]</td>
-						<td class="accent1">[#A43312]</td>
-						<td class="accent2"></td>
+						<td class="primary">[#D6D6D8]</td>
+						<td class="secondary">[#3A3B3F]</td>
+						<td class="accent1">[#A0361B]</td>
+						<td class="accent2">[#114B2C]</td>
 					</tr>
 				</tbody>
 			</table>
@@ -78,11 +78,11 @@
 			<!-- Choose a font for your paragraphs (body copy) and headlines. What font(s) have you chosen? Why did you choose what you did?  Make sure to review the list of web safe fonts at W3Schools.org as a starting point.  Think also about which of your colors above you might use for background and font colors. -->
 
 			<h4>
-				Heading Font: [Font Name here]
+				Heading Font: [Kanit]
 				<!-- change this -->
 			</h4>
 			<h4>
-				Paragraph Font: [Font Name here]
+				Paragraph Font: [Ubuntu]
 				<!-- change this -->
 			</h4>
 			<h3>Normal paragraph example</h3>
@@ -108,21 +108,73 @@
 			<h3>Navigation</h3>
 			<!-- Think about how you want your navigation bar to look. In the site-plan.css file change the colors to your colors to get the look you desire. -->
 			<nav>
-				<a href="#">Home</a>
-				<a href="#">Page2</a>
-				<a href="#">Page3</a>
+				<a href="index.html">Home></a>
+        		<a href="our-story.html">Our Story></a>
+        		<a href="past-rebuilds.html">Past Projects></a>
+				<a href="contact-form">Contact Form</a>
 			</nav>
 			<hr />
 
 			<h2>Content</h2>
 			<h3>Home page</h3>
-			<p>[content, images, data for the home page]</p>
+			<p>
+				Purpose:
+				Children in the foster system, espcially teens, have a very rough start to their lives without much direction of where they can go.
+				Second Chance is about giving them that boost they need, a way to learn valuable skills whilst working towards a college centered future.
+				This is done by rebuilding and fixing up jeeps with a foster teen, and once the jeep is fixed, it is sold and used as scholarship money for the teen.
+				
+				Want to know more about Second Chance?
+				Contact Us:
+				Cory's Phone Number: (563)-258-3504
+				Email: reynolds_racing@yahoo.com
+		
+			</p>
+			<p>Images for the Home page</p>
+			<img src="images/vehicle/bayou.jpeg" alt="bayou_forest">
+			<img src="images/mail_icon.png" alt="mail_icon">
+			<img src="images/phone_icon.png" alt="phone_icon">
+			<img src="images/vehicle/karma1.jpg" alt="karma_moab">
+			<img src="images/vehicle/sabotage1.jpeg" alt="sabotage_moab">
+
 			<h3>[Page 2]</h3>
-			<p>[content, images, data for the subpage]</p>
+			<p>
+        		In 2015 we had a family council and decided together that we were going to become a Certified family to do Foster Care in Dubuque, Iowa. When I was in fourth grade one of my very best friends Lisa was a foster child.  Unfortunately, she had a very bad experience with her foster family and was taken from that home and put in another home.  I didn't find out until I went to school that she would not be coming back.  I had always thought that someday in the future that I wanted to be a Foster parent.  Dad and I took an eight-week course to get us prepared to be certified.  We took our classes during the months of October and November and were certified by January with our certification stating that we were a Foster Family with the option to adopt.  
+
+        		Our very first call to take a placement was for two boys about to turn 2 and 4.  They came to our home two weeks before their birthdays.  We were also told that their Mother was pregnant and we were asked if we would take placement of the baby when it was born.  They were unsure of the due date of the baby, but knew it was probably summer time.  So, Trevor and Sawyer came to our home just after Easter weekend on March 28, 2016.  We were also called a few months after they were placed with us to take another little boy that was 2 years old.  He came to stay with us starting on May 16th. At the end of July on the 29th Aliciah was born, and our case worker brought her to our home on August 1, 2016. She was so tiny and just a beautiful little girl with dark brown hair and deep brown eyes.  Jordan was able to return home to live with his Mom on November 20th.  We have stayed in touch with Jordan's mother and have shared pictures over social media.  It was a joy to have Jordan in our home.
+
+        		We continued to have Trevor, Sawyer, and Aliciah in our home and towards the end of the school year it was looking like their birth parents rights were going to be terminated since they had not worked on anything that the state had asked them to do to show that they were in a better and more stable place to have their children return home.  We were able to adopt Trevor, Sawyer, and Aliciah on June 9, 2016 and they made our number of six children turn into nine.  Than while we were out on vacation visiting family in Utah, Idaho, and Oregon we were able to go to the Salt Lake City Temple on June 30, 2016 and have them sealed for time and all eternity to our family.
+
+        		The following October we found out that Trevor, Sawyer, and Aliciah's birth parents had had another son and we were contacted by DHS about taking placement and we said that we would.  But by the time he was born and released from the hospital DHS decided to place him with a different family.  We felt wronged by DHS and desired to have him be placed with his biological siblings, which was the original plan.  The birth parents had also requested for him to be placed with us.  Long story short we had lined ourselves up with a lawyer and decided to take DHS to court to try and get him placed with us and his siblings.  We were able to get the courts to award us visits with him, so we were able to have him in our home and to spend time with his biological siblings.  The courts ended up saying that he needed to stay with the family he was placed with and that it would be up to that family weather or not we continued to have visit between the siblings.  The family their little brother was placed with had no intention of keeping in touch or letting our kids bond with their brother. It was a hard ten months while we tried to right the wrong that we felt had taken place.  We had to accept that we tried our best and move on.
+
+        		We were asked to take placement of a 10-month-old boy on August 13, 2017, which we did take placement. It was very hard to say yes to this placement because he was close to the same age of our three sibling that we had just been told by the courts that we would not be getting him placed with us.  But we felt that we were to take placement of the little boy, because after all we had gotten into foster care to help our community in a way that we felt that we could.  He stayed with us until we found out that we were going to be relocated to Louisiana.  We contacted our case worker and let them know and we were asked to take him to stay with another foster couple Jason and Elizabeth Groom. The transition went smoothly, but it was hard to say good bye.  We stayed in touch with Jason and Elizabeth and they actually adopted Gregory on December 20, 2019.  When we moved to Thibodaux, Louisiana we did not continue with Foster Care. We decided that taking care of our nine was going to be a big job.
+      		</p>
+      		<p>Images for the Page 2</p>
+        	<img src="images/family/family12.jpg" alt="family1">
+        	<img src="images/family/family11.jpg" alt="family2">
+        	<img src="images/family/family9.jpg" alt="family3">
+        	<img src="images/family/family5.jpg" alt="family4">
+        	<img src="images/family/family6.jpg" alt="family2">
+
+			<h3>[Past Rebuilds]</h3>
+      		<p>
+        		Past Completed Projects
+        
+        		[A short paragraph is being put together for each set of photo's that will be added later.]
+      		</p>
+      		<p>Images for the Page 3</p>
+        	<img src="images/vehicle/bayou5.jpg" alt="bayou_before">
+        	<img src="images/vehicle/bayou1.jpeg" alt="bayou_after">
+        	<img src="images/vehicle/karma2.jpg" alt="karma_before">
+        	<img src="images/vehicle/karma3.jpg" alt="karma_after">
+        	<img src="images/vehicle/sabotage2.jpg" alt="sabotage_before">
+        	<img src="images/vehicle/sabotage3.jpg" alt="sabotage_after">
+        	<img src="images/vehicle/solstice1.jpg" alt="solstice_before">
+        	<img src="images/vehicle/solstice2.jpg" alt="solstice_after">
 			<h2>Wireframes</h2>
 			<p>
-				Create two wireframes for your site. One for each page and list them
-				here
+				<img src="images/main_wireframe.png" alt="main_wireframe">
+        		<img src="images/our-story-wireframe.png" alt="our-story-wireframe">
+        		<img src="images/past-projects-wireframe.png" alt="past-projects-wireframe">
 			</p>
 
 			<h3>Home</h3>
@@ -130,14 +182,17 @@
 				[Any additional details about home that the wireframe does not make
 				clear]
 			</p>
-			<img src="#" alt="home page wireframe" />
 
-			<h3>[Page 2]</h3>
+			<h3>Our Story</h3>
 			<p>
 				[Any additional details about page 2 that the wireframe does not make
 				clear]
 			</p>
-			<img src="#" alt="page 2 wireframe" />
+
+			<h3>[Past Rebuilds]</h3>
+      		<p>         
+        		The blank white squares are going to be buttons to click for sliders as the entire page is a slideshow of past projects. And the paragraph text that is shown will instead show up when an image is clicked, as it will expand the window to give more info on the rebuild using Javascript.
+      		</p>
 		</main>
 	</body>
 </html>
