--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
             <a href="coolpics/index.html">Coolpics</a>
             <a href="blog/index.html">Blog</a>
             <a href="second-chance/index.html">Personal Website</a>
+            <a href="recipes/index.html">Recipes</a>
         </ol>
     </main>
     <footer>
