--- a/recipes/index.html
+++ b/recipes/index.html
@@ -7,9 +7,9 @@
     <meta name="description" content="Create a page for a recipe site. It should be responsive and include good SEO, be accessible, and will give the opportunity to practice using Flexbox.">
     <meta property="og:title" content="Recipes">
     <meta property="og:type" content="website" />
-    <meta property="og:description" content="Page Description">
+    <meta property="og:description" content="Create a page for a recipe site. It should be responsive and include good SEO, be accessible, and will give the opportunity to practice using Flexbox.">
     <meta property="og:image" content="URL to an image">
-    <meta property="og:url" content="https://githubusername.github.io/WDD-131/recipes">
+    <meta property="og:url" content="https://spencman101.github.io/WDD-131/recipes/index.html">
     <meta name="twitter:card" content="summary_large_image">
     <title>Recipes</title>
     <script src="recipes.js"></script>
@@ -29,7 +29,7 @@
         </div>
         <hr>
         <div class="recipe">
-            <img src="images/sweet-potato-waffle-md.jpg" alt="Sweet Potato Waffle">
+            <!-- <img src="images/sweet-potato-waffle-md.jpg" alt="Sweet Potato Waffle">
             <ul class="tags">
                 <li>Waffles</li>
                 <li>Sweet Potato</li>
@@ -50,7 +50,7 @@
             <p>'Add the egg yolks, oil, salt, cayenne, sugar, ginger, shallots, sweet potatoes (steam and mash before), and milk and mix well.',
                 'Next add the cornmeal, chives, and flour and baking powder',
                 'Whip the egg whites until stiff and fold in',
-                'Cook until golden brown in a waffle iron. Serve with butter and Wilted Greens or Honey.'</p>
+                'Cook until golden brown in a waffle iron. Serve with butter and Wilted Greens or Honey.'</p> -->
         </div>
     </main>
     <footer>
