--- a/recipes/index.html
+++ b/recipes/index.html
@@ -28,33 +28,7 @@
     </div>
     <hr>
     <main>
-        <div class="recipe">
-            <!-- <img src="images/sweet-potato-waffle-md.jpg" alt="Sweet Potato Waffle">
-            <div class="inner_recipe">
-                <ul class="tags">
-                    <li>Waffles</li>
-                    <li>Sweet Potato</li>
-                    <li>Side</li>
-                </ul>
-                <h2>Sweet Potato Waffles</h2>
-                <span
-                    class="rating"
-                    role="img"
-                    aria-label="Rating: 4 out of 5 stars"
-                >
-                    <span aria-hidden="true" class="icon-star">⭐</span>
-                    <span aria-hidden="true" class="icon-star">⭐</span>
-                    <span aria-hidden="true" class="icon-star">⭐</span>
-                    <span aria-hidden="true" class="icon-star-empty">⭐</span>
-                    <span aria-hidden="true" class="icon-star-empty">☆</span>
-                </span>
-                <p class="description">
-                    'Add the egg yolks, oil, salt, cayenne, sugar, ginger, shallots, sweet potatoes (steam and mash before), and milk and mix well.',
-                    'Next add the cornmeal, chives, and flour and baking powder',
-                    'Whip the egg whites until stiff and fold in',
-                    'Cook until golden brown in a waffle iron. Serve with butter and Wilted Greens or Honey.'</p>
-            </div> -->
-        </div>
+        <div class="recipe_list"></div>
     </main>
     <footer>
         <div class="social">
