--- a/recipes/index.html
+++ b/recipes/index.html
@@ -24,7 +24,7 @@
         <form>
             <input type="text" id="recipe" name="recipe" placeholder="Find a recipe"/>
         </form>
-        <img src="images/search.svg" alt="Search">
+        <button type="submit"><img src="images/search.svg" alt="Search"></button>
     </div>
     <hr>
     <main>
