Cosmetic Changes (Flex)

--- a/second-chance/index.html
+++ b/second-chance/index.html
@@ -12,9 +12,10 @@
             <img class="logo" src="images/logo.png" alt="Second Chance Logo">
         </a>
         <nav>
-            <a class="home" href="index.html">Home</a>
-            <a class="story" href="our-story.html">Our Story</a>
-            <a class="past" href="past-rebuilds.html">Past Projects</a>
+            <a href="index.html">Home</a>
+            <a href="our-story.html">Our Story</a>
+            <a href="past-rebuilds.html">Past Projects</a>
+            <a href="ways-to-help.html">Ways To Help</a>
         </nav>
         <a href="index.html" id="logo_link2">
             <img class="logo" src="images/logo.png" alt="Second Chance Logo">
@@ -22,14 +23,14 @@
     </header>
     <main>
         <h1 class="home-title">Second Chances</h1>
+        <p class="main_p">
+            Children in the foster system, espcially teens, have a very rough start to their lives without much direction of where they can go.
+            Second Chance is about giving them that boost they need, a way to learn valuable skills whilst working towards a college centered future.
+            This is done by rebuilding and fixing up jeeps with a foster teen, and once the jeep is fixed, it is sold and used as scholarship money for the foster teen.
+        </p>
         <div class="main_bayou">
             <img class="main_img" src="images/vehicle/bayou.jpeg" alt="bayou_forest">
         </div>
-        <h2>Purpose</h2>
-        <p class="main_p">Children in the foster system, espcially teens, have a very rough start to their lives without much direction of where they can go.
-        Second Chance is about giving them that boost they need, a way to learn valuable skills whilst working towards a college centered future.
-        This is done by rebuilding and fixing up jeeps with a foster teen, and once the jeep is fixed, it is sold and used as scholarship money for the foster teen.
-        </p>
         <div class="jeeps_main">
             <img class="karma_moab" src="images/vehicle/karma1.jpg" alt="karma_moab">
             <img class="sabotage_moab" src="images/vehicle/sabotage1.jpeg" alt="sabotage_moab">
