--- a/second-chance/our-story.html
+++ b/second-chance/our-story.html
@@ -12,9 +12,10 @@
             <img class="logo" src="images/logo.png" alt="Second Chance Logo">
         </a>
         <nav>
-            <a class="home" href="index.html">Home</a>
-            <a class="story" href="our-story.html">Our Story</a>
-            <a class="past" href="past-rebuilds.html">Past Projects</a>
+            <a href="index.html">Home</a>
+            <a href="our-story.html">Our Story</a>
+            <a href="past-rebuilds.html">Past Projects</a>
+            <a href="ways-to-help.html">Ways To Help</a>
         </nav>
         <a href="index.html" id="logo_link2">
             <img class="logo" src="images/logo.png" alt="Second Chance Logo">
