--- a/second-chance/index.html
+++ b/second-chance/index.html
@@ -8,10 +8,12 @@
 </head>
 <body>
     <header>
-        <a href="index.html" id="logo_link1">
-            <img class="logo" src="images/logo.png" alt="Second Chance Logo">
-        </a>
-        <h1>Second Chances</h1>
+        <div class="top_row">
+            <a href="index.html" id="logo_link1">
+                <img class="logo" src="images/logo.png" alt="Second Chance Logo">
+            </a>
+            <h1>Second Chances</h1>
+        </div>
         <nav>
             <a href="index.html">Home</a>
             <a href="our-story.html">Our Story</a>
