Main Page/Footer Changes

--- a/second-chance/index.html
+++ b/second-chance/index.html
@@ -24,8 +24,8 @@
     <main>
         <div class="first_impression">
             <p>
-                Children in the foster system, especially teens, have a very rough start to their lives; without much direction of where they can go.
-                Second Chance is about giving them just that, a chance to learn valuable skills whilst working towards a college centered future.
+                Children in the foster system, especially teens, have a very rough start to their lives; without much direction of where they can go.<br><br>
+                Second Chance is about giving them that direction, a chance to learn valuable skills whilst working towards a college centered future.
                 This is done through the hard work of rebuilding and fixing up jeeps, which are then sold and used for scholarship money so the teen may attend college.
             </p>
             <div class="main_bayou">
@@ -36,12 +36,16 @@
             <img class="karma_moab" src="images/vehicle/karma1.jpg" alt="karma_moab">
             <img class="sabotage_moab" src="images/vehicle/sabotage1.jpeg" alt="sabotage_moab">
         </div>
-        <h2>Want to know more about Second Chance?</h2>
+        <h2>Learn More About Second Chance</h2>
         <div class="contact">
-            <img class="contact_icon" src="images/phone_icon.png" alt="phone_icon">
-            <p>Cory's Phone Number: (563)-258-3504</p>
-            <img class="contact_icon" src="images/mail_icon.png" alt="mail_icon">
-            <p>Email: reynolds_racing@yahoo.com</p>
+            <div>
+                <img class="contact_icon" src="images/phone_icon.png" alt="phone_icon">
+                <p>Cory's Phone Number<br>(563)-258-3504</p>
+            </div>
+            <div>
+                <img class="contact_icon" src="images/mail_icon.png" alt="mail_icon">
+                <p>Email<br>reynolds_racing@yahoo.com</p>
+            </div>
         </div>
     </main>
     <footer>
