--- a/second-chance/past-rebuilds.html
+++ b/second-chance/past-rebuilds.html
@@ -13,13 +13,12 @@
             <a href="index.html" id="logo_link1">
                 <img class="logo" src="images/logo.png" alt="Second Chance Logo">
             </a>
-            <h1>Second Chances</h1>
+            <h1>Second Chance</h1>
         </div>
         <nav>
             <a href="index.html">Home</a>
             <a href="our-story.html">Our Story</a>
             <a href="past-rebuilds.html">Past Projects</a>
-            <a href="ways-to-help.html">Ways To Help</a>
         </nav>
     </header>
     <main class="past-rebuilds">
