--- a/second-chance/site-plan.html
+++ b/second-chance/site-plan.html
@@ -191,7 +191,7 @@
 
 			<h3>[Past Rebuilds]</h3>
       		<p>         
-        		The blank white squares are going to be buttons to click for sliders as the entire page is a slideshow of past projects. And the paragraph text that is shown will instead show up when an image is clicked, as it will expand the window to give more info on the rebuild using Javascript.
+        		The blank white squares are going to be buttons to click for sliders as the entire page is a slideshow of past projects. All of this is going to be dynamically added into this page, so future projects can be easily added an displayed along with any relevant text.
       		</p>
 		</main>
 	</body>
