--- a/second-chance/our-story.html
+++ b/second-chance/our-story.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="author" content="Spencer Reynolds">
     <title>Our Story</title>
     <link rel="stylesheet" href="styles/style.css">
 </head>
