--- a/second-chance/past-rebuilds.html
+++ b/second-chance/past-rebuilds.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="author" content="Spencer Reynolds">
     <title>Past Rebuilds</title>
     <script defer src="main.js"></script>
     <link rel="stylesheet" href="styles/style.css">
