--- a/second-chance/our-story.html
+++ b/second-chance/our-story.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="Spencer Reynolds">
+    <meta name="description" content="This page discusses the background of the Reynolds family, who head the organizaiton, and how they came to be where they are now. It discusses their own journey and experience with the foster system.">
     <title>Our Story</title>
     <link rel="stylesheet" href="styles/style.css">
 </head>
