--- a/second-chance/past-rebuilds.html
+++ b/second-chance/past-rebuilds.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="Spencer Reynolds">
+    <meta name="description" content="This page highlights past completed projects showing starting and ending pictures, as well as featuring the experience of those for each individual jeep.">
     <title>Past Rebuilds</title>
     <script defer src="main.js"></script>
     <link rel="stylesheet" href="styles/style.css">
