--- a/second-chance/index.html
+++ b/second-chance/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="Spencer Reynolds">
+    <meta name="description" content="This page explains the mission of second chance, a non profit geared towards foster teens. It provides contact information to reach out to the runnner of the organization as well.">
     <title>Main Page</title>
     <link rel="stylesheet" href="styles/style.css">
 </head>
