--- a/second-chance/past-rebuilds.html
+++ b/second-chance/past-rebuilds.html
@@ -13,7 +13,7 @@
     <header>
         <div class="top_row">
             <a href="index.html" id="logo_link1">
-                <img class="logo" src="images/logo.png" alt="Second Chance Logo">
+                <img class="logo" src="images/logo.png" alt="Second Chance Logo" width="100" height="100">
             </a>
             <h1>Second Chance</h1>
         </div>
