Social Image Declaration

--- a/second-chance/index.html
+++ b/second-chance/index.html
@@ -120,11 +120,11 @@
         <h2>Learn More About Second Chance</h2>
         <div class="contact">
             <div>
-                <img class="contact_icon" src="images/phone_icon.png" alt="phone_icon">
+                <img class="contact_icon" src="images/phone_icon.png" alt="phone_icon" width="64" height="64">
                 <p>Cory's Phone Number<br>(563)-258-3504</p>
             </div>
             <div>
-                <img class="contact_icon" src="images/mail_icon.png" alt="mail_icon">
+                <img class="contact_icon" src="images/mail_icon.png" alt="mail_icon" width="64" height="64">
                 <p>Email<br>reynolds_racing@yahoo.com</p>
             </div>
         </div>
@@ -135,10 +135,10 @@
         <p><a href="contactus.html">Contact Us</a></p>
         <div class="social">
             <a href="https://facebook.com" target="_blank">
-                <img src="images/facebook.png" alt="fb icon">
+                <img src="images/facebook.png" alt="fb icon" width="64" height="64">
             </a>
             <a href="https://instagram.com" target="_blank">
-                <img src="images/instagram.png" alt="instagram icon">
+                <img src="images/instagram.png" alt="instagram icon" width="64" height="64">
             </a>
         </div>
     </footer>
