--- a/second-chance/our-story.html
+++ b/second-chance/our-story.html
@@ -129,10 +129,10 @@
         <p><a href="contactus.html">Contact Us</a></p>
         <div class="social">
             <a href="https://facebook.com" target="_blank">
-                <img src="images/facebook.png" alt="fb icon">
+                <img src="images/facebook.png" alt="fb icon" width="64" height="64">
             </a>
             <a href="https://instagram.com" target="_blank">
-                <img src="images/instagram.png" alt="instagram icon">
+                <img src="images/instagram.png" alt="instagram icon" width="64" height="64">
             </a>
         </div>
     </footer>
